--- a/Infraero.Relprev.WebUi/wwwroot/emailtemplates/EmailPadrao.html
+++ b/Infraero.Relprev.WebUi/wwwroot/emailtemplates/EmailPadrao.html
@@ -360,7 +360,7 @@
                                                 <div style="font-size: 12px; line-height: 14px; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; color: #555555;">
                                                     <p style="font-size: 14px; line-height: 16px; margin: 0;">
                                                         <strong>
-                                                            <span style="color: #3d3bee; line-height: 55px; font-size: 20px;">%NAME%</span>
+                                                            <span style="color: #3d3bee; line-height: 55px; font-size: 20px;">%NAME%,</span>
                                                         </strong>
                                                     </p>
                                                 </div>
@@ -423,43 +423,7 @@
                             </div>
                         </div>
                     </div>
-                    <div style="; background-color: #F4F4F4;">
-                        <div class="block-grid" style="Margin: 0 auto; min-width: 320px; max-width: 700px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; background-color: transparent; ;">
-                            <div style="border-collapse: collapse; display: table; width: 100%; background-color: transparent;">
-                                <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #F4F4F4;"><tr><td align="center"><table cellpadding="0" cellspacing="0" border="0" style="width: 700px"><tr class="layout-full-width" style="background-color: transparent"><![endif]-->
-                                <!--[if (mso)|(IE)]><td align="center" width="700" style="background-color: transparent; width: 700px; border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent;" valign="top"><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 0px; padding-left: 0px; padding-top: 5px; padding-bottom: 0px;"><![endif]-->
-                                <div class="col num12" style="min-width: 320px; max-width: 700px; display: table-cell; vertical-align: top; ;">
-                                    <div style="width: 100% !important;">
-                                        <!--[if (!mso)&(!IE)]><!-->
-                                        <div style="border-top: 0px solid transparent; border-left: 0px solid transparent; border-bottom: 0px solid transparent; border-right: 0px solid transparent; padding-top: 5px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
-                                            <!--<![endif]-->
-                                            <table border="0" cellpadding="0" cellspacing="0" class="divider" role="presentation" style="table-layout: fixed; vertical-align: top; border-spacing: 0; border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; min-width: 100%; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;" valign="top" width="100%">
-                                                <tbody>
-                                                    <tr style="vertical-align: top;" valign="top">
-                                                        <td class="divider_inner" style="word-break: break-word; vertical-align: top; min-width: 100%; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; border-collapse: collapse;" valign="top">
-                                                            <table align="center" border="0" cellpadding="0" cellspacing="0" class="divider_content" height="70" role="presentation" style="table-layout: fixed; vertical-align: top; border-spacing: 0; border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; border-top: 0px solid transparent; height: 70px;" valign="top" width="100%">
-                                                                <tbody>
-                                                                    <tr style="vertical-align: top;" valign="top">
-                                                                        <td height="70" style="word-break: break-word; vertical-align: top; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; border-collapse: collapse;" valign="top">
-                                                                            <span></span>
-                                                                        </td>
-                                                                    </tr>
-                                                                </tbody>
-                                                            </table>
-                                                        </td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                            <!--[if (!mso)&(!IE)]><!-->
-                                        </div>
-                                        <!--<![endif]-->
-                                    </div>
-                                </div>
-                                <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
-                                <!--[if (mso)|(IE)]></td></tr></table></td></tr></table><![endif]-->
-                            </div>
-                        </div>
-                    </div>
+                    
                     <div style="background-color: #FFFFFF;">
                         <div class="block-grid" style="Margin: 0 auto; min-width: 320px; max-width: 700px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; background-color: #FFFFFF; ;">
                             <div style="border-collapse: collapse; display: table; width: 100%; background-color: #FFFFFF;">
