preparação para homologaçao

--- a/Infraero.Relprev.WebUi/wwwroot/emailtemplates/ForgotPassword.html
+++ b/Infraero.Relprev.WebUi/wwwroot/emailtemplates/ForgotPassword.html
@@ -374,7 +374,7 @@
                                                     <p style="font-size: 12px; line-height: 18px; margin: 0;">
                                                         <strong>
                                                             <span style="font-size: 20px; line-height: 30px;">
-                                                                Você solicitou a recuperação da sua senha no site: www.relprev.com.br
+                                                                Você solicitou a recuperação da sua senha no site: %SITE%
                                                             </span>
                                                         </strong>
                                                     </p>
@@ -385,7 +385,7 @@
                                             <div style="color: #7C7C7C; font-family: 'Open Sans', Helvetica, Arial, sans-serif; line-height: 150%; padding-top: 15px; padding-right: 30px; padding-bottom: 20px; padding-left: 30px;">
                                                 <div style="font-size: 12px; line-height: 18px; color: #7C7C7C; font-family: 'Open Sans', Helvetica, Arial, sans-serif;">
                                                     <p style="font-size: 12px; line-height: 24px; margin: 0;">
-                                                        <span style="font-size: 16px;">Para que você possa iniciar o processo de recuperação da senha, criamos um link exclusivo através do qual você poderá criar uma nova senha. Este link tem validade de XX minutos a contar das HH:MM de DD/MM/AAAA.</span>
+                                                        <span style="font-size: 16px;">Para que você possa iniciar o processo de recuperação da senha, criamos um link exclusivo através do qual você poderá criar uma nova senha. Este link tem validade de %TEMPOTOKEN% minutos a contar das %HORA% de %DATA%.</span>
                                                     </p>
                                                     <p style="font-size: 12px; line-height: 24px; margin: 0;">
                                                         <span style="font-size: 16px;">Para criar a sua nova senha, clique em : REDEFINIR SENHA. </span>
@@ -453,7 +453,7 @@
                                         <div style="color: #7C7C7C; font-family: 'Open Sans', Helvetica, Arial, sans-serif; line-height: 150%; padding-top: 15px; padding-right: 30px; padding-bottom: 20px; padding-left: 30px;">
                                             <div style="font-size: 12px; line-height: 18px; color: #7C7C7C; font-family: 'Open Sans', Helvetica, Arial, sans-serif;">
                                                 <p style="font-size: 12px; line-height: 24px; margin: 0;">
-                                                    Mensagem enviada em : DD/MM/AAAA - HH:MM</span>
+                                                    Mensagem enviada em : %DATA% - %HORA%</span>
                                                 </p>
                                                 <p style="font-size: 12px; line-height: 18px; margin: 0;"> </p>
                                             </div>
